--- a/Recipes/meat-loaf.html
+++ b/Recipes/meat-loaf.html
@@ -36,5 +36,12 @@
             <li>0.25 tsp ground black pepper</li>
             <li>0.25 tsp salt</li>
         </p>
+        <h2>Steps</h2>
+            <ol>
+                <li>Line a 9”x5” loaf pan with parchment paper and preheat oven to 375°F.</li>
+                <li>In a large bowl, add all of the ingredients for the meatloaf. Mix well to combine.</li>
+                <li>Add meat to the loaf pan, gently press meat down and shape evenly and bake meatloaf at 375˚F for 40 minutes.</li>
+                <li>In a small bowl, mix all of the ingredients together for the sauce. Spread the sauce over meatloaf then return to oven and bake additional 15-20 minutes or until the internal temperature is 160˚F. Rest meatloaf 10 minutes before slicing. Drizzle with baking juices from the pan.</li>
+            </ol>
     </body>
 </html>
