Add Mashed Potatoes Recipe and Correct Typo on Meatloaf Page

--- a/Recipes/meat-loaf.html
+++ b/Recipes/meat-loaf.html
@@ -5,15 +5,15 @@
         <title>Odin Links and Images</title>
     </head>
     <body>
-        <h1> Meat Loaf</h1>
-        <img src="images/Meat Loaf.jpeg" alt="Meat Loaf">
+        <h1>Meatloaf</h1>
+        <img src="images/MeatLoaf.jpeg" alt="Meatloaf">
         <h2>Description</h2>
             <p>Amazing homemade Meatloaf Recipe. The meatloaf is so tender 
                 and juicy on the inside with a sweet and tangy glaze that 
                 adds so much flavor to the meatloaf. Serve the easy meatloaf
                 with mashed potatoes and a side of asparagus.</p>
         <h2>Ingredients</h2>
-        <p> <h4>Meat Loaf Ingredients</h4>
+        <p> <h4>Meatloaf Ingredients</h4>
             <li>2 lbs ground beef</li>
             <li>1 medium onion, finely choppef</li>
             <li>2 large eggs</li>
@@ -27,7 +27,7 @@
             <li>0.25 tsp ground black pepper</li>
             <li>0.5 tsp ground paprika</li>
         </p>
-        <p> <h4>Meat Loaf Sauce Ingredients</h4>
+        <p> <h4>Meatloaf Sauce Ingredients</h4>
             <li>0.75 cup ketchup</li>
             <li>1.5 tsp white vinegar</li>
             <li>2.5 Tbsp brown sugar</li>
@@ -41,7 +41,8 @@
                 <li>Line a 9”x5” loaf pan with parchment paper and preheat oven to 375°F.</li>
                 <li>In a large bowl, add all of the ingredients for the meatloaf. Mix well to combine.</li>
                 <li>Add meat to the loaf pan, gently press meat down and shape evenly and bake meatloaf at 375˚F for 40 minutes.</li>
-                <li>In a small bowl, mix all of the ingredients together for the sauce. Spread the sauce over meatloaf then return to oven and bake additional 15-20 minutes or until the internal temperature is 160˚F. Rest meatloaf 10 minutes before slicing. Drizzle with baking juices from the pan.</li>
+                <li>In a small bowl, mix all of the ingredients together for the sauce. Spread the sauce over meatloaf then return to 
+                    oven and bake additional 15-20 minutes or until the internal temperature is 160˚F. Rest meatloaf 10 minutes before slicing. Drizzle with baking juices from the pan.</li>
             </ol>
     </body>
 </html>
