--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/meat-loaf.html">Meat Loaf</a>
+    <a href="./recipes/meat-loaf.html">Meatloaf</a>
+    <a href="./recipes/Mashed-Potatoes.html">Mashed Potatoes</a>
 </body>
 </html>
