Fix paths to Meatloaf and Mashed Potatoes pages and to respective images

--- a/Recipes/mashed-potatoes.html
+++ b/Recipes/mashed-potatoes.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Mashed Potatoes</h1>
-        <img src="images/Mashed-Potatoes.jpeg" alt="Mashed Potatoes">
+        <img src="../Images/Mashed-Potatoes.jpeg" alt="Mashed Potatoes">
         <h2>Description</h2>
             <p>If you love good, old-fashioned mashed potatoes, this is the perfect recipe. Made with Idaho potatoes, milk, butter, 
                 and optional garlic, this go-to recipe for simple, homemade mashed potatoes is a classic holiday dish.
