--- a/Recipes/meat-loaf.html
+++ b/Recipes/meat-loaf.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Meatloaf</h1>
-        <img src="images/MeatLoaf.jpeg" alt="Meatloaf">
+        <img src="../Images/MeatLoaf.jpeg" alt="Meatloaf">
         <h2>Description</h2>
             <p>Amazing homemade Meatloaf Recipe. The meatloaf is so tender 
                 and juicy on the inside with a sweet and tangy glaze that 
