Add Ribs page and corresponding link on homepage

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipes</h1>
     <a href="../Recipes/meat-loaf.html">Meatloaf</a>
     <a href="../Recipes/mashed-potatoes.html">Mashed Potatoes</a>
+    <a href="../Recipes/ribs.html">Baby Back Ribs</a>
 </body>
 </html>
