Added lime background to pages with CSS sheet

--- a/Recipes/ribs.html
+++ b/Recipes/ribs.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Links and Images</title>
+        <link rel="stylesheet" href="../html-boilerplate/style.css">
     </head>
     <body>
         <h1>Oven-Baked Baby Back Ribs</h1>
