--- a/Recipes/mashed-potatoes.html
+++ b/Recipes/mashed-potatoes.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../html-boilerplate/style.css">
         <title>Odin Links and Images</title>
     </head>
     <body>
